# amd-power-control

./: MAINTAINERS  README.md  meson.build
power-control-x86/: CMakeLists.txt
power-control-x86/config/: power-config-host0.json
power-control-x86/service_files/: xyz.openbmc_project.Chassis.Control.Power.service
power-control-x86/src/: power_control.cpp
